- implement dense matrices - use vectorization for dense matrices - remove base matrix implementation